# BlockchainTracer

./: .gitignore  LICENSE  README.md  blockchaintracer.py  blockchaintracer_demo.ipynb  ml_tracer_demo.ipynb  notes.md  pyproject.toml  requirements-dev.txt
blockchaintracer/: __init__.py  base.py  blockchain_tracer.py  ml_tracer.py  ml_tracer_demo.ipynb
blockchaintracer-frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
blockchaintracer-frontend/components/: experiment-card.tsx  reproducibility-score.tsx
demo/: ml_tracer_demo.ipynb
docs/: getting_started.md  notes.md
examples/: ml_experiment_example.py  ml_tracer_example.py
frontend/app/: page.tsx
frontend/components/: tracer-form.tsx  transaction-history.tsx  verify-data.tsx  wallet-connect.tsx
frontend/lib/: types.ts
modelo_de_datos/: modelo_de_datos.bcf  modelo_de_datos.run.xml  modelo_de_datos.tex
paper/: ml_tracer.tex
