[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchaintracer"
version = "0.1.0"
description = "A toolkit for recording provenance on the blockchain"
authors = [
    { name = "Franco Cerino", email = "francocerino@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "web3",
    "huggingface_hub",
    "python-dotenv"
]

[tool.setuptools]
packages = ["blockchaintracer"]