[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchaintracer"
version = "0.1.0"
description = "Python package to trace sensitive information and process flows on the blockchain."
authors = [
    { name = "Franco Cerino", email = "francocerino@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "web3",
    "huggingface_hub",
    "python-dotenv",
    "ipfshttpclient"
]

[tool.setuptools]
packages = ["blockchaintracer"]